--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@rimiti/localeapp",
-  "version": "1.0.0",
+  "name": "@mr_timur_m/localeapp",
+  "version": "1.1.1",
   "description": "LocaleApp manager",
   "main": "dist/index.js",
-  "repository": "https://github.com/rimiti/localeapp.git",
-  "author": "dimitri.dobairro@dimsolution.com",
+  "repository": "https://github.com/Mr-Timur/localeapp.git",
+  "author": "tymur.mirzada@gmail.com",
   "license": "MIT",
   "preferGlobal": true,
   "scripts": {
